// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-iac-generator - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Generate deployment-ready Bicep templates from existing Azure environments or Draw.io architecture diagrams. Reverse-engineer live infrastructure into Infrastructure as Code. WHEN: generate bicep, azure to bicep, generate bicep from azure, bicep from diagram, diagram to bicep, create bicep templates from resources, export infrastructure as code, generate infrastructure code, reverse engineer azure, generate iac from azure. DO NOT USE FOR: creating new applications for Azure (use azure-prepare), deploying existing Bicep (use azure-validate then azure-deploy), comparing Bicep against live Azure (use azure-infrastructure-sync).",
  "extractedKeywords": [
    "against",
    "app service",
    "applications",
    "architecture",
    "authentication",
    "azure",
    "azure-deploy",
    "azure-infrastructure-sync",
    "azure-prepare",
    "azure-validate",
    "bicep",
    "cli",
    "code",
    "comparing",
    "container",
    "cosmos",
    "create",
    "creating",
    "deploy",
    "deploying",
    "deployment-ready",
    "diagram",
    "diagrams",
    "draw",
    "engineer",
    "environments",
    "existing",
    "export",
    "from",
    "function",
    "generate",
    "generator",
    "iac",
    "identity",
    "infrastructure",
    "into",
    "keyvault",
    "live",
    "mcp",
    "monitor",
    "networking",
    "redis",
    "resources",
    "reverse",
    "reverse-engineer",
    "sql",
    "storage",
    "templates",
    "then",
    "when",
  ],
  "name": "azure-iac-generator",
}
`;

exports[`azure-iac-generator - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "against",
  "app service",
  "applications",
  "architecture",
  "authentication",
  "azure",
  "azure-deploy",
  "azure-infrastructure-sync",
  "azure-prepare",
  "azure-validate",
  "bicep",
  "cli",
  "code",
  "comparing",
  "container",
  "cosmos",
  "create",
  "creating",
  "deploy",
  "deploying",
  "deployment-ready",
  "diagram",
  "diagrams",
  "draw",
  "engineer",
  "environments",
  "existing",
  "export",
  "from",
  "function",
  "generate",
  "generator",
  "iac",
  "identity",
  "infrastructure",
  "into",
  "keyvault",
  "live",
  "mcp",
  "monitor",
  "networking",
  "redis",
  "resources",
  "reverse",
  "reverse-engineer",
  "sql",
  "storage",
  "templates",
  "then",
  "when",
]
`;
